# lorrax_sandbox

./: .gitignore  AGENTS.md  CHANGELOG.md  KNOWN_SANDBOX_ERRORS.md  PARSE_OUTPUTS.md  agents_xprof.md  compare_bgw_gwjax.py  gn_bug_plan.md  isdf_sos_debug.py  pyproject.toml
.claude/: settings.local.json
docs/: BGW_LORRAX_MATCHING.md  DAVIDSON.md  JAX_PROFILING.md
scripts/: bench_fft_axis_order.py  bisect_fit_rchunk_compile.py  body_dyson_test.py  compare_bgw_gwjax.py  compare_qe_sr.py  compare_wfn.py  correlate_trR_vs_pair_error.py  correlate_trR_vs_pair_error_multi.py  cusolvermp_lu_correctness.py  debug_fix.py  debug_mem_stages.py  debug_zct_ws.py  dos_cjwindows.py  dump_fit_bufasgn.py  dump_fit_hlo.py  dump_ortho_doe.py  fit_cost_model.py  hlo_dump_fit_rchunk.py  integer_regression.py  parse_hlo_memory.py  phdf5_async_bench.py  phdf5_probe.py  phdf5_singlerank_bench.py  plot_dos_windows.py  probe_memory_stats.py  profile_fit_one_rchunk.py  profile_uneven_sharding.py  t6_hlo_si10_8gb.py  t6b_hlo_si10_4gb.py  test_100band_davidson.py  test_fix.py  test_iocallback_sharded.py  test_remat_effect.py  validate_aot_chooser.py  validate_chooser.py  validate_fft_workspaces.py  validate_heuristic.py  validate_isdf_reconstruction.py  validate_si10_4gb_dump.py  verify_split.py  (+1 more)
templates/: cohsex.in  epsilon.inp  manifest.yaml  nscf.in  nscfq.in  pw2bgw.in  scf.in  scf_co.in  scf_mos2_1x1.in  scf_silicon.in  sigma.inp
tmp/: centroids_new_200.txt  centroids_new_500.txt  centroids_old_200.txt  centroids_old_500.txt  check_orbit_closure.py  pf_smoke_driver.py  scissor_smoke.py  (+8 more)
(+31981 files in other folders)
