[project]
name = "lorrax-sandbox"
version = "0.1.0"
description = "Sandbox for debugging and testing LORRAX modules"
requires-python = ">=3.12"
dependencies = [
    "lorrax",
]

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
lorrax = { path = "../lorrax", editable = true }
